# GENERATIVE_AI_LEARNING

./: AUTISM_ASSIGNMENT.ipynb  Fine_Tuning_LLm_Models.ipynb  LLMS  Pineconevectordb.ipynb  README.md  YT_PaLM_from_Scratch.ipynb  Yogeswari.ipynb  chat_with_multipdfs.py  chatbot_llama_2.py  chatwithmultipdf (1).ipynb  chatwithmultipdf (2).ipynb  chatwithmultipdf (3).ipynb  chatwithmultipdf.ipynb  chromadb.ipynb  gemini_api_with_python.ipynb  llama.ipynb  llamaindexmistral7b.ipynb  projectsadhana.ipynb  ragappusingmistral7bhflangchain.ipynb  testopenaiapi_and_langchain.ipynb
AGENTIC-AI-Tutorials-main/: main.py  pyproject.toml  requirements.txt
AGENTIC-AI-Tutorials-main/langgraph-basics/: ChainsLangGraph.ipynb  DataclassStateSchema.ipynb  Evaluator-optimizer.ipynb  Humanintheloop.ipynb  ReActAgents.ipynb  Routing.ipynb  chatbot.ipynb  chatbotswithmultipletools.ipynb  orchestrator-worker.ipynb  parallelization.ipynb  prompting_chaining.ipynb  pydantic.ipynb  simplegraph.ipynb  streaming.ipynb
ATS/: README.md  adt  ats  comment.c  comment.h  main.c  platform.c  platform.h  post.c  post.h  reply.c  reply.h
ATS_USING_GEMINIPROVISION/: README.md  app.py
CALORIE_CALC_USING_GPV/: README.md  app.py  requirements.txt
GENAI_LEARNING/: Advanced_AI_Translation_with_Facebook's_No_Language_Left_Behind (1).ipynb  (+10 more)
RAG-Tutorials-main/: main.py  pyproject.toml  requirements.txt  test.txt
RAG-Tutorials-main/notebook/: AdaptiveRAG.ipynb  AgenticRAG.ipynb  CorrectiveRAG.ipynb  agenticrag.ipynb  document.ipynb  mongorag.ipynb  pdf_loader.ipynb  rag_evaluation.ipynb  typesense.ipynb
(+43 files in other folders)
