[project]
name = "agentic-ai-turotials-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.4.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.3",
    "langgraph-cli[inmem]>=0.4.19",
    "python-dotenv>=1.2.2",
    "wikipedia>=1.4.0",
]
