[project]
name = "rag-tutorials-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.4.1",
    "beautifulsoup4>=4.12.3",
    "chromadb>=1.5.5",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "langgraph-cli[inmem]>=0.4.18",
    "langsmith>=0.7.17",
    "pandas>=3.0.1",
    "pymongo>=4.16.0",
    "pymupdf>=1.27.2",
    "pypdf>=6.9.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "typesense>=2.0.0",
    "wikipedia>=1.4.0",
]
